@@ -1,0 +1,8 @@
+Site URL: https://www.lesbianpornvideos.com/
+Contact: traffictitan@gmail.com
+DMCA email: traffictitan@gmail.com
+Registered Agent: LK Rich
+11004 NE 11th St
+Suite 119
+Bellevue, WA 98004
+Phone: 206-687-7059
