@@ -4,3 +4,4 @@
 - Fix streamate listing bug
 - Add subject to stripchat
 - Add XNXX
+- Add Lesbian PornVideos
